--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
-<%= @post.author.name %>
-<%= @post.author.hometown %>
+<%= @post.author.try(:name) %>
+<%= @post.author.try(:hometown) %>
 
 <h1><%= @post.title %></h1>
 <p><%= @post.description %></p>
