--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,2 +1,3 @@
 <h1><%= post.id %>: <%= post.title %></h2>
-<div><%= truncate post.description %></div>
+<div id="body-<%= post.id %>"> <%= truncate post.description %></div>
+<button class='js-more' type="button" data-id='<%= post.id %>' action="<%= post_body_path(post) %>">See Body</button>
